expanded server and templates

--- a/template.html
+++ b/template.html
@@ -29,7 +29,7 @@
 									<small id="urlHelp" class="form-text text-muted">In OBS select Help &gt; Log Files &gt; Upload last Log File. Copy the URL and paste it here.</small>
 								</div>
 								<div class="col-2">
-									<button type="submit" class="btn btn-primary">Submit</button>
+									<button type="submit" class="btn btn-primary">Analyze</button>
 								</div>
 							</div>
 						</div>
@@ -77,14 +77,7 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="card border-warning">
-			<div class="card-header">Warning</div>
-			<div class="card-body">
-				<h4 class="card-title">Light card title</h4>
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-			</div>
-		</div>
+		{details}
     </div>
 </body>
 </html>
