--- a/detail.html
+++ b/detail.html
@@ -1,7 +1,7 @@
-<div class="card border-{sev}">
+<div class="card border-{sev} mb-3">
 	<div class="card-header">{severity}</div>
-			<div class="card-body">
-				<h4 class="card-title">{title}</h4>
-				<p class="card-text">{text}</p>
+		<div class="card-body">
+			<h4 class="card-title">{title}</h4>
+			<p class="card-text">{text}</p>
 	</div>
 </div>
