switch to get, more design

--- a/detail.html
+++ b/detail.html
@@ -1,4 +1,4 @@
-<div class="card border-{sev} mb-3">
+<div id="{anchor}" class="card border-{sev} mb-3">
 	<div class="card-header">{severity}</div>
 		<div class="card-body">
 			<h4 class="card-title">{title}</h4>
