--- a/template.html
+++ b/template.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <title>OBS Log Analyzer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
 </head>
@@ -17,7 +18,7 @@
 		</div>
 		<div class="row">
 			<div class="col">
-				<form method="post" action="">
+				<form method="get" action="">
 					<fieldset>
 						<div class="form-group">
 							<div class="row">
@@ -25,7 +26,7 @@
 									<legend>Log URL Input</legend>
 								</div>
 								<div class="col-8">
-									<input class="form-control" id="logUrlInput" aria-describedby="urlHelp" placeholder="https://gist.github.com/aaaaaaaaaaaaaaaaaaa" name="url" type="text">
+									<input class="form-control" id="logUrlInput" aria-describedby="urlHelp" placeholder="{ph}" name="url" type="text">
 									<small id="urlHelp" class="form-text text-muted">In OBS select Help &gt; Log Files &gt; Upload last Log File. Copy the URL and paste it here.</small>
 								</div>
 								<div class="col-2">
@@ -46,26 +47,26 @@
 		</div>
 		<div class="row">
 			<div class="col">
-				<div class="card text-white bg-danger mb-3" style="max-width: 20rem;">
+				<div class="card text-white border-danger mb-3" style="max-width: 20rem;">
 					<div class="card-header">Critical</div>
 					<div class="card-body">
-						<ul>{summary_critical}</ul>
+						{summary_critical}
 					 </div>
 				</div>
 			</div>
 			<div class="col">
-				<div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
+				<div class="card text-white border-warning mb-3" style="max-width: 20rem;">
 					<div class="card-header">Warning</div>
 					<div class="card-body">
-						<ul>{summary_warning}</ul>
+						{summary_warning}
 					 </div>
 				</div>
 			</div>
 			<div class="col">
-				<div class="card text-white bg-info mb-3" style="max-width: 20rem;">
+				<div class="card text-white border-info mb-3" style="max-width: 20rem;">
 					<div class="card-header">Info</div>
 					<div class="card-body">
-						<ul>{summary_info}</ul>
+						{summary_info}
 					 </div>
 				</div>
 			</div>
