more links. now in beta

--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-md-7 col-sm-6">
 					<h1>OBS Log Analyzer</h1>
-					<p class="lead">Oh so much crappy python.</p>
+					<p class="lead">Currently in Beta. Please report all crashes.</p>
 				</div>
 			</div>
 		</div>
