shuffling around html

--- a/detail.html
+++ b/detail.html
@@ -1,7 +1,6 @@
 <div id="{anchor}" class="card text-white border-{sev} mb-3">
-	<div class="card-header">{severity}</div>
-		<div class="card-body">
-			<h4 class="card-title">{title}</h4>
-			<p class="card-text">{text}</p>
+	<h5 class="card-header"><span class="badge badge-pill badge-{sev}">{severity}</span> {title}</h5>
+	<div class="card-body">
+		<p class="card-text">{text}</p>
 	</div>
 </div>
