--- a/template.html
+++ b/template.html
@@ -41,14 +41,14 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="page-header">
-					<h2 id="output">Summary</h2>
+					<h2 id="output">Log Analysis</h2>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col">
 				<div class="card text-white border-danger mb-3" style="max-width: 20rem;">
-					<div class="card-header">Critical</div>
+					<h5 class="card-header">Critical</h5>
 					<div class="card-body">
 						{summary_critical}
 					 </div>
@@ -56,7 +56,7 @@
 			</div>
 			<div class="col">
 				<div class="card text-white border-warning mb-3" style="max-width: 20rem;">
-					<div class="card-header">Warning</div>
+					<h5 class="card-header">Warning</h5>
 					<div class="card-body">
 						{summary_warning}
 					 </div>
@@ -64,17 +64,10 @@
 			</div>
 			<div class="col">
 				<div class="card text-white border-info mb-3" style="max-width: 20rem;">
-					<div class="card-header">Info</div>
+					<h5 class="card-header">Info</h5>
 					<div class="card-body">
 						{summary_info}
 					 </div>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="page-header">
-					<h2 id="output">Details</h2>
 				</div>
 			</div>
 		</div>
