--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>OBS Log Analyzer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
