--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-		<div class="page-header" id="banner">
+		<div class="page-header m-5" id="banner">
 			<div class="row">
 				<div class="col-lg-8 col-md-7 col-sm-6">
 					<h1>OBS Log Analyzer</h1>
@@ -16,36 +16,36 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row mx-3">
+			<p class="lead">
+				In OBS select Help &gt; Log Files &gt; Upload last Log File. Copy the URL and paste it here.
+			</p>
+		</div>
+		<div class="row m-3">
 			<div class="col">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<form method="get" action="">
-							<fieldset>
-								<div class="form-group">
-									<div class="row">
-										<div class="col-2">
-											<legend>Log URL Input</legend>
-										</div>
-										<div class="col-8">
-											<input class="form-control" id="logUrlInput" aria-describedby="urlHelp" placeholder="{ph}" name="url" type="text">
-											<small id="urlHelp" class="form-text text-muted">In OBS select Help &gt; Log Files &gt; Upload last Log File. Copy the URL and paste it here.</small>
-										</div>
-										<div class="col-2">
-											<button type="submit" class="btn btn-primary">Analyze</button>
-										</div>
+				<form method="get" action="">
+					<fieldset>
+						<div class="form-group">
+							<div class="row">
+								<div class="input-group">
+									<div "input-group-prepend">
+										<span class="input-group-text">Log URL input</span>
+									</div>
+									<input class="form-control" id="logUrlInput" aria-describedby="urlHelp" placeholder="{ph}" name="url" type="text">
+									<div class="input-group-append">
+										<button type="submit" class="btn btn-primary">Analyze</button>
 									</div>
 								</div>
-							</fieldset>
-						</form>
-					</div>
-				</div>
+							</div>
+						</div>
+					</fieldset>
+				</form>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row mb-3">
 			<div class="col-lg-12">
 				<div class="page-header">
-					<h2 id="output">Log Analysis <small class="text-muted">of log "{description}"</small></h2>
+					<h2 id="output">Log Analysis <small class="text-muted">of "{description}"</small></h2>
 				</div>
 			</div>
 		</div>
