template: Fix missing class tag

--- a/template.html
+++ b/template.html
@@ -28,7 +28,7 @@
 						<div class="form-group">
 							<div class="row">
 								<div class="input-group">
-									<div class=input-group-prepend">
+									<div class="input-group-prepend">
 										<span class="input-group-text">Log URL input</span>
 									</div>
 									<input class="form-control" id="logUrlInput" aria-describedby="urlHelp" placeholder="Paste log URL here" value="{ph}" name="url" type="text">
