--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-md-7 col-sm-6">
 					<h1>OBS Log Analyzer</h1>
-					<p class="lead">Currently in Beta. Please report all crashes.</p>
+					<p class="lead">Please <a href="https://github.com/sophieschi/loganalyzer/issues/new">report</a> all crashes together with the log that caused a crash.</p>
 				</div>
 			</div>
 		</div>
