Fix template alignment

--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-		<div class="page-header m-5" id="banner">
+		<div class="page-header my-5" id="banner">
 			<div class="row">
 				<div class="col-lg-8 col-md-7 col-sm-6">
 					<h1>OBS Log Analyzer</h1>
@@ -16,12 +16,12 @@
 				</div>
 			</div>
 		</div>
-		<div class="row mx-3">
+		<div class="row no-gutters">
 			<p class="lead">
 				In OBS select Help &gt; Log Files &gt; Upload last Log File. Copy the URL and paste it here.
 			</p>
 		</div>
-		<div class="row mx-3">
+		<div class="row mx-3 no-gutters">
 			<div class="col">
 				<form method="get" action="">
 					<fieldset>
